--- a/CodeFiles/Tutorial.ipynb
+++ b/CodeFiles/Tutorial.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 0. Setup Paths"
+    "# Setup Paths"
    ]
   },
   {
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Create Label Map"
+    "# Create Label Map"
    ]
   },
   {
@@ -98,7 +98,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Create TF records"
+    "# Create TF records"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Issue 1과 Issue 2는 아래에 달아둔 'Solution Link'를 참고해서 해결도 된다.\n",
+    "\n",
+    "그러나 추후 글이 사라질 경우를 대비해서 내 Github Link에 수정한 파일을 올려둔다.\n",
+    "\n",
+    "Github 주소 : https://github.com/HwToLrn/RealTimeObjectDetection\n",
+    "\n",
+    "IssueFiles에서 각 파일을 아래 경로를 참고해서 잘 붙여넣으면 된다."
    ]
   },
   {
@@ -109,8 +122,18 @@
     " - ImportError: cannot import name 'string_int_label_mamp_pb2' from 'object_detection.protos' (C:\\Users\\pksmb\\anaconda3\\envs\\vproject_venv\\lib\\site-packages\\object_detection\\protos\\__init__.py)\n",
     "\n",
     "Solution Link 1\n",
-    " - https://github.com/datitran/object_detector_app/blob/master/object_detection/protos/string_int_label_map_pb2.py\n",
-    " \n",
+    " - https://github.com/datitran/object_detector_app/blob/master/object_detection/protos/string_int_label_map_pb2.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-06T14:07:06.806386Z",
+     "start_time": "2021-10-06T14:07:06.780862Z"
+    }
+   },
+   "source": [
     "Issue 2\n",
     " - AttributeError: module 'tensorflow' has no attribute 'gfile'\n",
     " \n",
@@ -118,17 +141,26 @@
     " - https://stackoverflow.com/questions/55591437/attributeerror-module-tensorflow-has-no-attribute-gfile\n",
     " - tensorflow 2.x 이상 버전에서는 tf.gfile이 tf.io.gfile로 변경됐다고 한다.\n",
     " - C:/Users/pksmb/anaconda3envs/vproject_venv/Lib/site-packages/object_detection/utils/label_map_util.py\n",
-    " - 위 경로로 파일을 찾아서 검색으로 tf.gile을 찾고 tf.io.gile로 바꿔준다.\n",
-    " \n",
+    " - 위 경로로 파일을 찾아서 검색으로 tf.gile을 찾고 tf.io.gile로 바꿔준다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "내 github 'HwToLrn/RealTimeObjectDetection'에서 가져왔다면 아래 Issue 3는 내가 이미 해결했으니 잘 동작하는지 바로 확인하면 된다.\n",
+    "\n",
     "Issue 3\n",
     " - TypeError: __init__(): incompatible constructor arguments. The following argument types are supported:\n",
     "    1. tensorflow.python.lib.io._pywrap_file_io.BufferedInputStream(filename: str, buffer_size: int, token: tensorflow.python.lib.io._pywrap_file_io.TransactionToken = None)\n",
-    "    \n",
-    "Solution Link 3\n",
+    "\n",
+    "Solution Link 3 \n",
     " - https://stackoverflow.com/questions/63763809/error-when-converting-xml-files-to-tfrecord-files\n",
     " - 최초 오류 발생지를 따라서 파일을 들어간다. 내 경로는 아래와 같다.\n",
     " - Traceback (most recent call last):\n",
-    " File \"C:\\Users\\pksmb\\Desktop\\jupyter\\Vision\\Detection\\RealTimeObjectDetection_with_TF_OpenCV\\Tensorflow\\scripts\\generate_tfrecord.py\", line 62, in <module> label_map_dict = label_map_util.get_label_map_dict(label_map)"
+    " File \"C:\\Users\\pksmb\\Desktop\\jupyter\\Vision\\Detection\\RealTimeObjectDetection_with_TF_OpenCV\\Tensorflow\\scripts\\generate_tfrecord.py\", line 62, in <module> label_map_dict = label_map_util.get_label_map_dict(label_map)\n",
+    "    \n",
+    "참고로, No Module Named ~ 구문은 모듈이 설치되지 않아서 발생하는 것이니 해당 모듈을 pip install로 설치해주면 된다."
    ]
   },
   {
@@ -168,7 +200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Download TF Models Pretrained Models from Tensorflow Model Zoo"
+    "# Download TF Models Pretrained Models from Tensorflow Model Zoo"
    ]
   },
   {
@@ -203,7 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. Copy Model Config to Training Folder"
+    "# Copy Model Config to Training Folder"
    ]
   },
   {
@@ -237,7 +269,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. Update Config For Transfer Learning"
+    "# Update Config For Transfer Learning"
    ]
   },
   {
@@ -517,7 +549,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6. Train the model"
+    "# Train the model"
    ]
   },
   {
@@ -541,7 +573,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 7. Load Train Model From Checkpoint"
+    "# Load Train Model From Checkpoint"
    ]
   },
   {
@@ -582,7 +614,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 8. Detect in Real-Time"
+    "# Detect in Real-Time"
    ]
   },
   {
